# minesweeper-field-generator

minesweeper/: Main.hs  README.md  minesweeper.cabal  run.bat  run.sh
minesweeper/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
minesweeper/dist-newstyle/packagedb/ghc-9.6.7/: minesweeper-0.1.0.0-inplace.conf  package.cache
minesweeper/src/: CoreTypes.hs  GameLogic.hs
minesweeper/test/: GameLogicTests.hs  TestUtils.hs
